--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ PORT=5000
 
 CLIENT_URL=http://localhost:3000
 
-JWT_SECRET_KEY=sretregs35t3trher645c3
+JWT_SECRET_KEY=
 
 DB_HOST=localhost
 DB_PORT=5432
