--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "mime-types": "^2.1.35",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8",
     "nodemailer-express-handlebars": "^6.1.0",
     "nodemon": "^3.0.3",
