--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "main": "index.js",
   "scripts": {
     "dev-client": "cd ../client & npm run dev",
-    "dev": "concurrently \"npm run migrate\" \"npm run dev-server\" \"npm run dev-client\"",
+    "dev": "concurrently \"npm run migrate\" \"npm run seeds-run\" \"npm run dev-server\" \"npm run dev-client\"",
     "dev-server": "nodemon index.js",
-    "server": "node index.js",
+    "server": "concurrently \"npm run migrate\" \"npm run seeds-run\" node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "migrate": "node migrate.js"
+    "migrate": "node migrate.js",
+    "seeds-run": "node seeds-run.js",
+    "migrate-rollback-last": "npx knex migrate:rollback",
+    "migrate-rollback-all": "npx knex migrate:rollback --all"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
@@ -21,6 +25,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "fs": "^0.0.1-security",
     "handlebars": "^4.7.8",
@@ -31,8 +36,12 @@
     "nodemailer": "^6.9.8",
     "nodemailer-express-handlebars": "^6.1.0",
     "nodemon": "^3.0.3",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "pg": "^8.11.3",
-    "socket.io": "^4.7.4"
+    "socket.io": "^4.7.4",
+    "twilio": "^4.21.0"
   }
 }
