--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,20 @@ DB_USER_NAME=postgres
 DB_PASSWORD=postgres
 DB_DATABASE=selina
 
+ADMIN_NAME=
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
+
 MAIL_SERVICE=gmail
 MAIL_EMAIL=
 MAIL_FROM=RentAbout
 MAIL_PASSWORD=
+
+FACEBOOK_APP_API=
+FACEBOOK_APP_SECRET=
+
+GOOGLE_CLIENT_API=
+GOOGLE_CLIENT_SECRET=
+
+TURBOSMS_SENDER=
+TURBOSMS_TOKEN=
