--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev-client": "cd ../client & npm run dev",
-    "dev": "concurrently \"npm run migrate\" \"npm run seeds-run\" \"npm run dev-server\" \"npm run dev-client\"",
-    "dev-server": "nodemon index.js",
-    "server": "concurrently \"npm run migrate\" \"npm run seeds-run\" \"node index.js\"",
+    "dev": "concurrently \"npm run migrate\" \"npm run dev-start\" \"npm run dev-client\"",
+    "dev-start": "nodemon index.js",
+    "start": "concurrently \"npm run migrate\" \"npm run seeds-run\" \"node index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "node migrate.js",
     "seeds-run": "node seeds-run.js",
