--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "dev-client": "cd ../client & npm run dev",
     "dev": "concurrently \"npm run migrate\" \"npm run dev-start\" \"npm run dev-client\"",
     "dev-start": "nodemon index.js",
-    "start": "concurrently \"npm run migrate\" \"npm run seeds-run\" \"node index.js\"",
+    "start": "concurrently \"npm run migrate\" \"node index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "node migrate.js",
-    "seeds-run": "node seeds-run.js",
+    "seeds-start": "node seeds-run.js",
     "migrate-rollback-last": "npx knex migrate:rollback",
     "migrate-rollback-all": "npx knex migrate:rollback --all"
   },
