--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "fs": "^0.0.1-security",
+    "google-auth-library": "^9.6.3",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
