--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "fs": "^0.0.1-security",
+    "google-auth-library": "^9.6.3",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^6.9.8",
     "nodemailer-express-handlebars": "^6.1.0",
     "nodemon": "^3.0.3",
