--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev-client": "cd ../client & npm run dev",
+    "dev-client": "cd ../client & npx next dev -p 3001",
     "dev": "concurrently \"npm run migrate\" \"npm run dev-start\" \"npm run dev-client\"",
     "dev-start": "nodemon index.js",
     "start": "concurrently \"npm run migrate\" \"node index.js\"",
