--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.7.0",
