--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 PORT=5000
 
-SERVER_URL=https://localhost:5000
 CLIENT_URL=http://localhost:3000
 
 APP_SESSION_SECRET=
@@ -31,3 +30,4 @@ TURBOSMS_SENDER=
 TURBOSMS_TOKEN=
 
 MAX_FILE_SIZE=26214400
+MAX_SMALL_FILE_SIZE=1048576
