--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "path": "^0.12.7",
     "pg": "^8.11.3",
     "socket.io": "^4.7.4",
+    "stripe": "^15.1.0",
     "twilio": "^4.21.0"
   }
 }
