--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "pg": "^8.11.3",
+    "qrcode": "^1.5.3",
     "socket.io": "^4.7.4",
     "stripe": "^15.3.0",
     "twilio": "^4.21.0"
