--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "migrate-rollback-last": "npx knex migrate:rollback",
     "migrate-rollback-all": "npx knex migrate:rollback --all",
     "create-migration": "npx knex migrate:make",
-    "create-seed": "npx knex seed:make"
+    "create-seed": "npx knex seed:make",
+    "command-pay-rent": "node commands/payRent.js"
   },
   "author": "",
   "license": "ISC",
