--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "fs": "^0.0.1-security",
     "google-auth-library": "^9.6.3",
     "handlebars": "^4.7.8",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
