--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.7.0",
+    "node-html-to-image": "^4.0.0",
     "nodemailer": "^6.9.8",
     "nodemailer-express-handlebars": "^6.1.0",
     "nodemon": "^3.0.3",
