--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.7.0",
-    "node-html-to-image": "^4.0.0",
     "nodemailer": "^6.9.8",
     "nodemailer-express-handlebars": "^6.1.0",
     "nodemon": "^3.0.3",
@@ -51,6 +50,8 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
+    "pdf-to-img": "^3.0.0",
+    "pdf2pic": "^3.1.1",
     "pg": "^8.11.3",
     "qrcode": "^1.5.3",
     "socket.io": "^4.7.4",
