--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "google-auth-library": "^9.6.3",
     "handlebars": "^4.7.8",
     "html-pdf": "^3.0.1",
+    "jimp": "^0.22.12",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
@@ -54,6 +55,7 @@
     "pdf2pic": "^3.1.1",
     "pg": "^8.11.3",
     "qrcode": "^1.5.3",
+    "sharp": "^0.33.4",
     "socket.io": "^4.7.4",
     "twilio": "^4.21.0"
   }
