--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "create-seed": "npx knex seed:make",
     "command-pay-rent": "node commands/pay-rent.js",
     "command-auto-extended-finish": "node commands/auto-extended-finish.js",
-    "test-start": "concurrently \"npm run migrate\" \"node index.js\"",
+    "test-start": "concurrently \"npm run migrate\" \"node index.js\""
   },
   "author": "",
   "license": "ISC",
