--- a/.env.example
+++ b/.env.example
@@ -30,8 +30,9 @@ GOOGLE_CLIENT_SECRET=
 TURBOSMS_SENDER=
 TURBOSMS_TOKEN=
 
-MAX_FILE_SIZE=26214400
+MAX_FILE_SIZE=5242880
 MAX_SMALL_FILE_SIZE=1048576
+MAX_SUMMARY_FILE_SIZE=26214400
 
 PAYPAL_CLIENT_ID=
 PAYPAL_SECRET_KEY=
