--- a/.env.example
+++ b/.env.example
@@ -27,8 +27,9 @@ FACEBOOK_APP_SECRET=
 GOOGLE_CLIENT_API=
 GOOGLE_CLIENT_SECRET=
 
-TURBOSMS_SENDER=
-TURBOSMS_TOKEN=
+TWILIO_PHONE=
+TWILIO_SID=
+TWILIO_AUTH=
 
 MAX_FILE_SIZE=5242880
 MAX_SMALL_FILE_SIZE=1048576
