--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,7 @@ MAIL_EMAIL=
 MAIL_FROM=RentAbout
 MAIL_PASSWORD=
 
-FACEBOOK_APP_API=
+FACEBOOK_APP_ID=
 FACEBOOK_APP_SECRET=
 
 GOOGLE_CLIENT_API=
