--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,5 @@ MAX_SUMMARY_FILE_SIZE=26214400
 PAYPAL_CLIENT_ID=
 PAYPAL_SECRET_KEY=
 PAYPAL_API_URL=sandbox.paypal.com || paypal.com
+
+GOOGLE_GEOCODING_KEY=
