--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "concurrently \"npm run migrate\" \"npm run dev-start\" \"npm run dev-client\"",
     "dev-start": "nodemon index.js",
     "dev-server": "node index.js",
-    "start": "concurrently \"npm run migrate\" \"node index.js\"",
+    "start": "concurrently \"npm i\" \"npm run migrate\" \"node index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "node migrate.js",
     "seeds-start": "node seeds-run.js",
