--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,8 @@ ADMIN_NAME=
 ADMIN_EMAIL=
 ADMIN_PASSWORD=
 
-MAIL_SERVICE=gmail
+MAIL_HOST=
+MAIL_PORT=
 MAIL_EMAIL=
 MAIL_FROM=RentAbout
 MAIL_PASSWORD=
