--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,9 @@ PAYPAL_SECRET_KEY=
 PAYPAL_API_URL=sandbox.paypal.com || paypal.com
 
 GOOGLE_GEOCODING_KEY=
+
+BUCKET_ACCESS_KEY=
+BUCKET_ACCESS_SECRET_KEY= 
+BUCKET_REGION=
+BUCKET_NAME=
+BUCKET_URL=
