--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "pdf2pic": "^3.1.1",
+    "pdfkit": "^0.15.0",
     "pg": "^8.11.3",
     "qrcode": "^1.5.3",
     "sharp": "^0.33.4",
