--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,10 @@ ADMIN_NAME=
 ADMIN_EMAIL=
 ADMIN_PASSWORD=
 
+CLIENT_ADMIN_NAME=
+CLIENT_ADMIN_EMAIL=
+CLIENT_ADMIN_PASSWORD=
+
 MAIL_HOST=
 MAIL_PORT=
 MAIL_FROM=RentAbout
