--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ PORT=5000
 
 CLIENT_URL=http://localhost:3000
 SERVER_URL=http://localhost:5000
+FOREST_API_URL=http://localhost:5001
+CORS_URLS=http://localhost:3000
 
 APP_SESSION_SECRET=
 JWT_SECRET_KEY=
