--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev-client": "cd ../client & npx next dev",
-    "dev": "concurrently \"npm run migrate\" \"npm run dev-start\" \"npm run dev-client\"",
+    "dev-forest-server": "cd ../forest-server & python app.py",
+    "dev": "concurrently \"npm run migrate\" \"npm run dev-start\" \"npm run dev-client\" \"npm run dev-forest-server\"",
     "dev-start": "nodemon index.js",
     "dev-server": "node index.js",
     "start": "concurrently \"npm i\" \"npm run migrate\" \"node index.js\"",
