--- a/package.json
+++ b/package.json
@@ -4,34 +4,34 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev-client": "cd ../client & npx next dev",
+    "dev-forest-server": "cd ../forest-server & python app.py",
+    "dev": "concurrently \"npm run migrate\" \"npm run dev-start\" \"npm run dev-client\" \"npm run dev-forest-server\"",
+    "dev-start": "nodemon index.js",
+    "dev-server": "node index.js",
+    "start": "concurrently \"npm i\" \"npm run migrate\" \"node index.js\"",
+    "start-prod": "npm run migrate && node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "node migrate.js",
     "seeds-start": "node seeds-run.js",
     "migrate-rollback-last": "npx knex migrate:rollback",
     "migrate-rollback-all": "npx knex migrate:rollback --all",
     "create-migration": "npx knex migrate:make",
     "create-seed": "npx knex seed:make",
-    "dev-client": "cd ../client & npx next dev",
-    "dev-forest-server": "cd ../forest-server & python app.py",
-    "dev-server": "nodemon index.js",
-    "dev": "concurrently \"npm run migrate\" \"npm run dev-server\" \"npm run dev-client\" \"npm run dev-forest-server\"",
-    "start": "concurrently \"npm i\" \"npm run migrate\" \"node index.js\"",
-    "fast-start": "concurrently \"npm run migrate\" \"node index.js\"",
-    "dev-command-pay-rent": "node commands/pay-rent.js",
-    "command-pay-rent": "node commands/pay-rent.js"
+    "command-pay-rent": "node commands/pay-rent.js",
+    "test-start": "concurrently \"npm run migrate\" \"node index.js\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1668.0",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "cross-env": "^10.0.0",
     "crypto": "^1.0.1",
-    "dotenv": "^16.6.1",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
@@ -41,6 +41,7 @@
     "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "libphonenumber-js": "^1.11.7",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
@@ -56,7 +57,6 @@
     "pdf2pic": "^3.1.1",
     "pdfkit": "^0.15.0",
     "pg": "^8.11.3",
-    "qrcode": "^1.5.3",
     "sharp": "^0.33.4",
     "socket.io": "^4.7.4",
     "twilio": "^4.23.0"
