--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "dev-client": "cd ../client & npx next dev",
     "dev-forest-server": "cd ../forest-server & python app.py",
-    "dev": "concurrently \"npm run migrate\" \"npm run dev-start\" \"npm run dev-client\" \"npm run dev-forest-server\"",
-    "dev-start": "nodemon index.js",
-    "dev-server": "node index.js",
+    "dev": "concurrently \"npm run migrate\" \"npm run dev-server\" \"npm run dev-client\" \"npm run dev-forest-server\"",
+    "dev-server": "nodemon index.js",
     "start": "concurrently \"npm i\" \"npm run migrate\" \"node index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "node migrate.js",
