--- a/package.json
+++ b/package.json
@@ -4,21 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev-client": "cd ../client & npx next dev",
-    "dev-forest-server": "cd ../forest-server & python app.py",
-    "dev": "concurrently \"npm run migrate\" \"npm run dev-server\" \"npm run dev-client\" \"npm run dev-forest-server\"",
-    "dev-server": "nodemon index.js",
-    "start": "concurrently \"npm i\" \"npm run migrate\" \"node index.js\"",
-    "start-prod": "npm run migrate && node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "node migrate.js",
     "seeds-start": "node seeds-run.js",
     "migrate-rollback-last": "npx knex migrate:rollback",
     "migrate-rollback-all": "npx knex migrate:rollback --all",
     "create-migration": "npx knex migrate:make",
     "create-seed": "npx knex seed:make",
-    "command-pay-rent": "node commands/pay-rent.js",
-    "test-start": "concurrently \"npm run migrate\" \"node index.js\""
+    "dev-client": "cd ../client & npx next dev",
+    "dev-forest-server": "cd ../forest-server & python app.py",
+    "dev-server": "nodemon index.js",
+    "dev": "concurrently \"npm run migrate\" \"npm run dev-server\" \"npm run dev-client\" \"npm run dev-forest-server\"",
+    "start": "concurrently \"npm i\" \"npm run migrate\" \"node index.js\"",
+    "fast-start": "concurrently \"npm run migrate\" \"node index.js\"",
+    "dev-command-pay-rent": "node commands/pay-rent.js",
+    "command-pay-rent": "node commands/pay-rent.js"
   },
   "author": "",
   "license": "ISC",
@@ -29,8 +28,9 @@
     "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cross-env": "^10.0.0",
     "crypto": "^1.0.1",
-    "dotenv": "^16.4.1",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
